ANTLR/python-examples/example07/MyParser.g4
parser grammar MyParser;    			

options { tokenVocab=MyLexer; }			

received : Received fromToken byToken withToken idToken SemiColon date EOF ;

fromToken : FromText ;

byToken: ByText ;

withToken : WithText ;

idToken : IdText ;

date : DateContents+ ;
